# google-oauth2-test

./: .env.example  Cargo.toml  README.md
front/: vite.config.ts
front/src/components/: Header.tsx
front/src/pages/: login.page.tsx  profile.page.tsx
src/: google_oauth.rs  handler.rs  main.rs  model.rs  router.rs
