[package]
name = "google-oauth2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hyper = { version = "0.14.26", features = ["client"] }
hyper-tls = "0.5.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
